('GSM' is Greg Sabino Mullane, greg@turnstep.com)

2.13.1_4

  - Make quoting of int, floats, and names much safer. (CPAN bug #41565) [GSM]
  - Make quoting of geometric types respect all valid chars (CPAN bug #41565) [GSM]
  - Return ints and bools-cast-to-number from the db as true Perlish numbers.
    (CPAN bug #47619) [GSM]
  - Fix backslash quoting of arrays (CPAN bug #46732) [GSM]
  - Fix error when destringifying array starting with '[x:y]='. Per report from 
    Jeff Trout [GSM]
  - Fix problem with foreign_key_info() and NAME_uc (CPAN bug #46109) [GSM]
  - Make foreign_key_info() respect FetchHashKeyName (CPAN bug #46103) [GSM]
  - Fix Makefile.PL to apply POSTGRES_INCLUDE in a saner way.
    (CPAN bug #45769) [GAURAV@cpan.org]
  - Improve Win32 README notes [Curtis Jewell]
  - Fix spelling error in type_info (CPAN bug #47786) [justin.d.hunter@gmail.com]
  - Add functions to support MS VC++ 7.0 (CPAN bug #47858) [Taro Nishino]

2.13.1 Released April 23, 2009 (subversion r12713)

  - Fix leak in pg_warn (CPAN bug #45163) [rweikusat@mssgmbh.com]

2.13.0 Released April 13, 2009 (subversion r12695)

  - Ensure we always set sqlstate inside of pg_st_prepare_statement
    (CPAN bug #44732) [rweikusat@mssgmbh.com]
  - When libpq has a connection error, return SQLSTATE 08000 ( "CONNECTION EXCEPTION" )
    instead of the more generic 02000 ( "DATA EXCEPTION" ) (CPAN bug #44744)
    [rweikusat@mssgmbh.com]
  - Fix minor Perl::Critic nags (CPAN bug #44704) (Debian #bug 521969) [GSM]
  - Clarify change of $dbh->{Name} behavior (CPAN bug 44985) [GSM]

2.12.0 Released March 28, 2009 (subversion r12627)

  - Change large object interface from lo_* to pg_lo_* and make them accessible 
    via direct $dbh calls (e.g. $dbh->pg_lo_import instead of $dbh->func(..,'pg_lo_import').
    The use of $dbh->func(... 'lo_*') is deprecated. [GSM] (CPAN bug #44467)
  - Throw an exception for large_object functions called when AutoCommit is on, 